# unstructured_experiments

./: pyproject.toml
unstructured_experiments/csv/: batch_0.csv  csv-partitioner.py
unstructured_experiments/csv/json/: chunks.json  partition.json
unstructured_experiments/excel/: excel-partitioner.py
unstructured_experiments/excel/json/: chunks.json  partition.json
unstructured_experiments/html/: html-chunker.py  html-partitioner.py
unstructured_experiments/html/json/: chunks.json  partition.json
unstructured_experiments/pdf/: pdf-partitioner.py
unstructured_experiments/pdf/json/: 523-dm-1-[fast].json
unstructured_experiments/ppt&pptx/: ppt-partitioner.py
unstructured_experiments/ppt&pptx/json/: chunks.json  partition.json
